--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
+    "nanoid": "^5.0.5",
     "sequelize": "^6.37.0"
   }
 }
